css fix for shadows being cut off

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -40,14 +40,10 @@ div {
   color: white;
   font-weight: bolder;
   font-size: 48pt;
-  // position: absolute;
-  // bottom: 20px;
-  // left: 20px;
   font-family: sans-serif;
   text-shadow: 4px 4px 10px #333;
-  margin-left: auto;
-  margin-right: 3rem;
-  margin-bottom: 0.5rem;
+  margin: 0 0 0.5rem auto;
+  padding-right: 3rem;
 
   .date {
     font-size: 18pt;
@@ -85,9 +81,7 @@ div {
     }
   }
 
-  width: fit-content; //450px;
-  //max-height: 400px;
-  //min-height: 200px;
+  width: fit-content;
   overflow-y: auto;
   margin: 10px;
   border: 1px solid #ccc;
@@ -180,7 +174,7 @@ div {
   color: white;
   font-weight: bold;
   margin-left: auto;
-  margin-right: 2rem;
+  padding-right: 2rem;
   text-shadow: 2px 2px 6px #333;
   > div {
     > div {
